syntax = "proto3";

package greet;

option go_package = "github.com/lowc1012/go-exercises/grpc/greet/proto";

message GreetRequest {
  string first_name = 1;
  string last_name = 2;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
}
